Filter modal alignment fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -449,8 +449,9 @@ body {
 
         .filter-modal{
           position: absolute;
-          left:10px;
-          top:40px;
+          left:0px !important;
+          transform: none !important;
+          top:20px !important;
           width: 20%;
           min-height: 400px;
           z-index: 2;
