--- a/src/scss/_ipad.scss
+++ b/src/scss/_ipad.scss
@@ -307,6 +307,20 @@
                         
                     }
 
+                    .filter-modal{
+                        position: absolute;
+                        left:0px !important;
+                        top:20px !important;
+                        width: 20%;
+                        min-height: 400px;
+                        z-index: 2;
+                        background: $light-color;
+                        border: 1px solid rgba(84, 95, 125, 0.14);
+                        box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+                        border-radius: 4px;
+                        padding: 15px;
+                    }
+
                 }
 
                 .info-card{
@@ -343,6 +357,8 @@
             
                     
                 }
+
+                
             }
         
     }
